# Ky-shutsu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODESTYLE.md  README.md  fix_includes.py  version.txt
Code/BuildSystem/CMake/: FindNSOpenXR.cmake  nsUtils.cmake
Code/BuildSystem/Scripts/: v8.linux_arm64.args.gn  v8.windows_x64.args.gn
Code/Engine/: CommonIncludes.h
Code/Engine/KyKernel/: CMakeLists.txt  KyKernel.rc  KyKernelDLL.h  resource.h
Code/Engine/KyKernel/Meshes/: MeshBufferUtils.h
Code/Engine/KyKernel/Systems/: KyArbitor.h
Code/Engine/KyModelImporter/: CMakeLists.txt  Importer.cpp  Importer.h  KyModelImportSystem.cpp  KyModelImportSystem.h  KyModelImporter.rc  KyModelImporterDLL.h
Code/Foundation/: CMakeLists.txt  FoundationPCH.cpp  UserConfig.h  nsEngine.natvis  nsEngine.py
Code/Foundation/Algorithm/: Sorting.h
Code/Foundation/Application/: Application.h
Code/Foundation/Basics/: AllDefinesOff.h
Code/Foundation/CodeUtils/: Preprocessor.h
Code/Foundation/Configuration/: Startup.h
Code/Foundation/Containers/: ArrayBase.h  Deque.h  DynamicArray.h  HashTable.h  Map.h  Set.h
Code/Foundation/IO/: DirectoryWatcher.h  MemoryStream.h  OSFile.h  OpenDdlParser.h
Code/Foundation/Math/: Color.h  ColorScheme.h  Math.h  Quat.h  Random.h  Transform.h  Vec3.h
Code/Foundation/Memory/: Allocator.h  AllocatorWrapper.h  InstanceDataAllocator.h  LargeBlockAllocator.h  MemoryTracker.h
Code/Foundation/Profiling/: Profiling_Superluminal.h  Profiling_Tracy.h
Code/Foundation/Reflection/: PropertyPath.h
Code/Foundation/Strings/: StringConversion.h
Code/Foundation/System/: SystemInformation.h
Code/Foundation/Threading/: AtomicUtils.h  Lock.h  Mutex.h  ThreadUtils.h
Code/Foundation/Time/: Time.h
Code/Foundation/Types/: Delegate.h  Id.h  ObjectPtr.h  RefCounted.h  ScopeExit.h  SharedPtr.h  TypeTraits.h  UniquePtr.h  Uuid.h
Code/Texture/: CMakeLists.txt
Code/Texture/DirectXTex/: BC4BC5.cpp  BC6HBC7.cpp
Code/Texture/Image/: ImageConversion.h  ImageFormat.h
Code/Tools/ArchiveTool/: ArchiveTool.cpp  CMakeLists.txt
Code/Tools/CopyrightMake/: CopyrightMake.cs
Code/Tools/CrashHandler/: CHHeroWidget.cpp  CHHeroWidget.h  CHHeroWidget.ui  CHUserDataWidget.cpp  CHUserDataWidget.h  CHUserDataWidget.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.moc.h  MainWindow.ui  ProtoApp.cpp  resources.qrc
Code/Tools/HeaderCheck/: HeaderCheck.cpp
Code/Tools/LicenseHasher/: CMakeLists.txt
Code/Tools/PiperTTSDownloader/: CMakeLists.txt  PiperDownloader.cs
Code/Tools/Proto/: CMakeLists.txt  MainWindow.moc.h
Code/UnitTests/: APHTML_LICENSE_UNIT_TEST.h
Code/UnitTests/NetworkingEngineTest/: ApertureNetworkTest.cpp  ApertureNetworkTestPCH.h  CMakeLists.txt
Code/WDBase/: int128.h  nullptr.h  version.h  wdcorpbase.h  wdcorpdeprecated.h  wdcorphave.h  wdcorpresult.h  wdcorpstdarg.h  wdcorpunits.h
Code/WDBase/config/: wdcorpcompiler.h  (+2 more)
Code/WDVideo/: CMakeLists.txt  WDVEngineDLL.h  WDVEnginePCH.h  wdvideopublic.rc
Code/WDVideo/Audio/: AudioDecoderVPX.cpp  AudioDecoderVPX.h
Code/WDVideo/Interface/: IWDVFileInterface.cpp  IWDVFileInterface.h  IWDVFrame.cpp  IWDVFrame.h  IWDVFrameBuffer.cpp  IWDVFrameBuffer.h  IWDVPacket.cpp  IWDVPacket.h  IWDVPacketQueue.h  IWDVideoPlayer.cpp  IWDVideoPlayer.h
Code/WDVideo/Video/: VideoPlayerWebm.cpp  VideoPlayerWebm.h
(+97 files in other folders)
